# graspit_msgs

./: CMakeLists.txt  manifest.xml  package.xml
action/: AfterGrasping.action  GraspExecution.action  Manual.action  Rotation.action  ToggleGripper.action  Translation.action
msg/: Grasp.msg  GraspStatus.msg~  ObjectInfo.msg  ObjectInfo.msg~  RotationInfo.msg  TranslationInfo.msg
msg/lisp/graspit_msgs/: graspit_msgs-msg.asd
src/.svn/: entries
src/.svn/text-base/: grasp_msg.cpp.svn-base  utils.cpp.svn-base
src/graspit_msgs/msg/: _Grasp.py  _GraspStatus.py  _ObjectInfo.py  __init__.py
src/graspit_msgs/srv/: _GetObjectInfo.py  _ObjectInfo.py  __init__.py
srv/: GraspSrv.srv
