<package>
  <name>graspit_msgs</name>
  <version>1.0.0</version>
  <description>
    Message related to interacting with graspIt!'s planning scene and planners via ROS.
  </description>
  
  <maintainer email="jvarley@cs.columbia.edu">Jake Varley</maintainer>

  <author>Jake</author>
  <license>BSD</license>
  <url>https://github.com/CURG/graspit_msgs.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>message_runtime</run_depend> 
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>


